RESOLVED FIXED188576
Crash in WebKit::filterPreloadHSTSEntry via NetworkProcess::getHostNamesWithHSTSCache
https://bugs.webkit.org/show_bug.cgi?id=188576
Summary Crash in WebKit::filterPreloadHSTSEntry via NetworkProcess::getHostNamesWithH...
Sihui Liu
Reported 2018-08-14 13:34:28 PDT
Called on an invalid object.
Attachments
Patch (2.40 KB, patch)
2018-08-14 13:38 PDT, Sihui Liu
no flags
Patch (9.24 KB, patch)
2018-08-14 16:46 PDT, Sihui Liu
no flags
patch (9.33 KB, patch)
2018-08-14 17:16 PDT, Alex Christensen
no flags
Sihui Liu
Comment 1 2018-08-14 13:34:45 PDT
Sihui Liu
Comment 2 2018-08-14 13:38:32 PDT
Chris Dumez
Comment 3 2018-08-14 14:36:50 PDT
Why no api test?
Alex Christensen
Comment 4 2018-08-14 15:03:35 PDT
Comment on attachment 347107 [details] Patch I agree. This should have an API test, and that would be easy to write.
Ryosuke Niwa
Comment 5 2018-08-14 15:53:07 PDT
Comment on attachment 347107 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=347107&action=review > Source/WebKit/ChangeLog:3 > + CrashTracer: [USER] com.apple.WebKit.Networking.Development at com.apple.WebKit: WTF::HashTable<WTF::String, WTF::String, WTF::IdentityExtractor, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::String> >::add + 26 Bugzilla title shouldn't refer to things like CrashTracer.
Sihui Liu
Comment 6 2018-08-14 16:46:32 PDT
Sihui Liu
Comment 7 2018-08-14 16:48:30 PDT
(In reply to Alex Christensen from comment #4) > Comment on attachment 347107 [details] > Patch > > I agree. This should have an API test, and that would be easy to write. Test added.
Alex Christensen
Comment 8 2018-08-14 17:16:03 PDT
WebKit Commit Bot
Comment 9 2018-08-14 17:55:26 PDT
Comment on attachment 347134 [details] patch Clearing flags on attachment: 347134 Committed r234875: <https://trac.webkit.org/changeset/234875>
WebKit Commit Bot
Comment 10 2018-08-14 17:55:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.