Crash in WebKit::filterPreloadHSTSEntry via NetworkProcess::getHostNamesWithHSTSCache https://bugs.webkit.org/show_bug.cgi?id=188576 <rdar://problem/43148977>

Reviewed by Alex Christensen.

Source/WebKit:

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::fetchWebsiteData):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/WKWebsiteDatastore.mm: Added.
(TEST):


Canonical link: https://commits.webkit.org/203668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234875 268f45cc-cd09-0410-ab3c-d52691b4dbfc